# babyfoot_CV

./: .gitignore  Makefile  README.md  ball_tracker.py  field_detector.py  main.py  pyproject.toml  test_tracking.py  tracking_pipeline.py
dataset_creation/: classes.txt  frames_extraction.py  images_annotation.py
field_detection/: chromatic.py
src/field_detection/: abstract_class.py  chromatic.py
src/stats_computation/: animate.py  field_measures.py  field_state.py  game_state.py  show_stats.py  stats_extraction.py  utils.py
src/stats_computation/interface/: annotations_extraction.py  classes.py
src/tracker/: ball_tracker.py  player_tracker.py  tracking_pipeline.py
stats/: recorded_2_main.json
test/field_detection/: test_chromatic.py
test/stats_computation/: import_test_sequence.py  test_animate.py  test_field_state.py  test_game_state.py  test_stats_extraction.py  test_utils.py
test/stats_computation/interface/: test_annotations_extraction.py  test_classes.py
test/stats_computation/test_images/: women_doubles_3sec_0.txt  women_doubles_3sec_1.txt  women_doubles_3sec_10.txt  women_doubles_3sec_11.txt  women_doubles_3sec_12.txt  women_doubles_3sec_13.txt  women_doubles_3sec_14.txt  women_doubles_3sec_15.txt  women_doubles_3sec_16.txt  women_doubles_3sec_17.txt  women_doubles_3sec_18.txt  women_doubles_3sec_19.txt  women_doubles_3sec_2.txt  women_doubles_3sec_20.txt  women_doubles_3sec_21.txt  women_doubles_3sec_22.txt  women_doubles_3sec_23.txt  women_doubles_3sec_24.txt  women_doubles_3sec_25.txt  women_doubles_3sec_26.txt  women_doubles_3sec_27.txt  (+73 more)
