[tool.poetry]
name = "babyfoot-cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "babyfoot_cv"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.3.0"
opencv-python = "^4.6"
tqdm = "^4.64.1"
imutils = "^0.5.4"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
